--- a/locale/da/LC_MESSAGES/django.po
+++ b/locale/da/LC_MESSAGES/django.po
@@ -11,11 +11,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-30 10:29+0300\n"
+"POT-Creation-Date: 2024-06-04 15:43+0300\n"
 "PO-Revision-Date: 2024-05-30 12:20+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
-"Language-Team: Danish <https://weblate.kausal.tech/projects/watch/django/da/>"
-"\n"
+"Language-Team: Danish <https://weblate.kausal.tech/projects/watch/django/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -788,24 +787,6 @@ msgstr "andre indikatorer"
 msgid "contact persons"
 msgstr "kontaktpersoner"
 
-#: actions/models/action.py
-#, fuzzy
-#| msgid "internal notes"
-msgid "Internal"
-msgstr "interne noter"
-
-#: actions/models/action.py aplans/utils.py
-#, fuzzy
-#| msgid "Published"
-msgid "Public"
-msgstr "Publiceret"
-
-#: actions/models/action.py
-#, fuzzy
-#| msgid "Accessibility"
-msgid "visibility"
-msgstr "Tilgængelighed"
-
 #: actions/models/action.py actions/models/plan.py content/models.py
 #: feedback/models.py indicators/models.py notifications/models.py
 #: orgs/models.py pages/models.py
@@ -975,9 +956,7 @@ msgstr "Rolle i afhængigheder"
 #, fuzzy
 #| msgid "Set if this action is merged with another action"
 msgid "Set if this action has the same role in all its dependency relationships with other actions"
-msgstr ""
-"Indstilles, hvis denne handling har samme rolle i alle sine "
-"afhængighedsforhold med andre handlinger"
+msgstr "Indstilles, hvis denne handling har samme rolle i alle sine afhængighedsforhold med andre handlinger"
 
 #: actions/models/action.py
 msgctxt "partitive"
@@ -1544,6 +1523,18 @@ msgstr "Underkategorier"
 
 #: actions/models/features.py
 #, fuzzy
+#| msgid "No filtering"
+msgid "No ordering"
+msgstr "Ingen filtrering"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "verbose name"
+msgid "Order by name"
+msgstr "udførligt navn"
+
+#: actions/models/features.py
+#, fuzzy
 #| msgid "indicator contact persons"
 msgid "Do not show contact persons publicly"
 msgstr "indikator kontaktpersoner"
@@ -1610,9 +1601,7 @@ msgstr "Vis organisationsforfædre i kontaktoplysninger på kontaktpersoner"
 #: actions/models/features.py
 #, fuzzy
 msgid "When displaying a contact person's contact details, should the contact person's organization be displayed along with all its ancestors?"
-msgstr ""
-"Når man viser en kontaktpersons kontaktoplysninger, skal kontaktpersonens "
-"organisation så vises sammen med alle dens forfædre?"
+msgstr "Når man viser en kontaktpersons kontaktoplysninger, skal kontaktpersonens organisation så vises sammen med alle dens forfædre?"
 
 #: actions/models/features.py
 #, fuzzy
@@ -1708,6 +1697,18 @@ msgstr "Indstil til at muliggøre sammenligning af indikatorer mellem organisati
 
 #: actions/models/features.py
 #, fuzzy
+#| msgid "Indicator data"
+msgid "Indicator order"
+msgstr "Indikatordata"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "indicator contact persons"
+msgid "Choose how to order indicators in the action pages"
+msgstr "send til indikatorens kontaktpersoner"
+
+#: actions/models/features.py
+#, fuzzy
 #| msgid "Set to enable drafting and reviewing functionality"
 msgid "Set to enable drafting and reviewing functionality and choose the desired workflow for reviewing"
 msgstr "Indstillet til at aktivere kladde- og gennemgangsfunktionalitet"
@@ -1728,9 +1729,7 @@ msgstr "Inkluder handlingsprintlayout i rapporter"
 #: actions/models/features.py
 #, fuzzy
 msgid "In the report spreadsheet output, include a sheet with all actions in a layout optimized for printing."
-msgstr ""
-"I rapportens regnearksoutput skal du inkludere et ark med alle handlinger i "
-"et layout, der er optimeret til udskrivning."
+msgstr "I rapportens regnearksoutput skal du inkludere et ark med alle handlinger i et layout, der er optimeret til udskrivning."
 
 #: actions/models/features.py
 #, fuzzy
@@ -1827,11 +1826,7 @@ msgstr "Status for brug"
 #: actions/models/plan.py
 #, fuzzy
 msgid "If unsure, use the default value representing customer use. For statistical purposes specify what the plan will be used for in order to differentiate between plans actually in use by customers and those created for some other reason."
-msgstr ""
-"Hvis du er usikker, skal du bruge standardværdien, der repræsenterer "
-"kundebrug. Til statistiske formål skal du angive, hvad planen skal bruges "
-"til for at kunne skelne mellem planer, der faktisk bruges af kunder, og dem, "
-"der er oprettet af andre årsager."
+msgstr "Hvis du er usikker, skal du bruge standardværdien, der repræsenterer kundebrug. Til statistiske formål skal du angive, hvad planen skal bruges til for at kunne skelne mellem planer, der faktisk bruges af kunder, og dem, der er oprettet af andre årsager."
 
 #: actions/models/plan.py
 msgid "site URL"
@@ -2630,6 +2625,24 @@ msgstr ""
 #: aplans/utils.py
 msgid "order"
 msgstr "bestille"
+
+#: aplans/utils.py
+#, fuzzy
+#| msgid "internal notes"
+msgid "Internal"
+msgstr "interne noter"
+
+#: aplans/utils.py
+#, fuzzy
+#| msgid "Published"
+msgid "Public"
+msgstr "Publiceret"
+
+#: aplans/utils.py
+#, fuzzy
+#| msgid "Accessibility"
+msgid "visibility"
+msgstr "Tilgængelighed"
 
 #: aplans/utils.py
 msgid "Authenticated users"
@@ -3822,8 +3835,8 @@ msgid "Recipients"
 msgstr "Modtagere"
 
 #: notifications/wagtail_admin.py
-#, fuzzy, python-format
-msgid "The email message will be sent on the specified day at %(time)s."
+#, fuzzy
+msgid "The email message will be sent on the specified day at"
 msgstr "E-mailen bliver sendt på den angivne dag på %(time)s."
 
 #: notifications/wagtail_admin.py
@@ -5048,9 +5061,6 @@ msgstr "Ingen tilladelse til at fjerne den bruger, der tilhører planer, du ikke
 #~ msgid "Home"
 #~ msgstr "Hjem"
 
-#~ msgid "Indicator data"
-#~ msgstr "Indikatordata"
-
 #~ msgid "Observations"
 #~ msgstr "Observationer"
 
@@ -5189,9 +5199,6 @@ msgstr "Ingen tilladelse til at fjerne den bruger, der tilhører planer, du ikke
 
 #~ msgid "By last updated"
 #~ msgstr "Senest opdateret"
-
-#~ msgid "No filtering"
-#~ msgstr "Ingen filtrering"
 
 #~ msgid "In the last 7 days"
 #~ msgstr "I de sidste 7 dage"
