--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -11,11 +11,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-30 10:29+0300\n"
+"POT-Creation-Date: 2024-06-04 15:43+0300\n"
 "PO-Revision-Date: 2024-05-30 07:40+0000\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
-"Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/"
-">\n"
+"Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -730,18 +729,6 @@ msgstr "muut mittarit"
 #: actions/export.py actions/models/action.py indicators/models.py
 msgid "contact persons"
 msgstr "yhteyshenkilöt"
-
-#: actions/models/action.py
-msgid "Internal"
-msgstr "Sisäinen"
-
-#: actions/models/action.py aplans/utils.py
-msgid "Public"
-msgstr "Julkinen"
-
-#: actions/models/action.py
-msgid "visibility"
-msgstr "Näkyvyys"
 
 #: actions/models/action.py actions/models/plan.py content/models.py
 #: feedback/models.py indicators/models.py notifications/models.py
@@ -1458,6 +1445,18 @@ msgid "Subcategories"
 msgstr "Alaluokat"
 
 #: actions/models/features.py
+#, fuzzy
+#| msgid "No filtering"
+msgid "No ordering"
+msgstr "Ei suodatusta"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "verbose name"
+msgid "Order by name"
+msgstr "selite"
+
+#: actions/models/features.py
 msgid "Do not show contact persons publicly"
 msgstr "Älä näytä yhteyshenkilöitä julkisesti"
 
@@ -1599,6 +1598,18 @@ msgstr "Ota mittareiden vertailu käyttöön"
 #: actions/models/features.py
 msgid "Set to enable comparing indicators between organizations"
 msgstr "Mahdollistaa mittareiden vertailun eri organisaatioiden kesken"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "Indicator data"
+msgid "Indicator order"
+msgstr "Mittarin data"
+
+#: actions/models/features.py
+#, fuzzy
+#| msgid "send to indicator contact persons"
+msgid "Choose how to order indicators in the action pages"
+msgstr "lähetä mittareiden yhteyshenkilöille"
 
 #: actions/models/features.py
 #, fuzzy
@@ -2477,6 +2488,18 @@ msgstr ""
 #: aplans/utils.py
 msgid "order"
 msgstr "järjestys"
+
+#: aplans/utils.py
+msgid "Internal"
+msgstr "Sisäinen"
+
+#: aplans/utils.py
+msgid "Public"
+msgstr "Julkinen"
+
+#: aplans/utils.py
+msgid "visibility"
+msgstr "Näkyvyys"
 
 #: aplans/utils.py
 msgid "Authenticated users"
@@ -3652,8 +3675,9 @@ msgid "Recipients"
 msgstr "Vastaanottajat"
 
 #: notifications/wagtail_admin.py
-#, python-format
-msgid "The email message will be sent on the specified day at %(time)s."
+#, fuzzy
+#| msgid "The email message will be sent on the specified day at %(time)s."
+msgid "The email message will be sent on the specified day at"
 msgstr "Sähköpostiviesti lähetetään valittuna päivänä klo %(time)s."
 
 #: notifications/wagtail_admin.py
@@ -4773,9 +4797,6 @@ msgstr "Ei oikeuksia poistaa käyttäjä joka kuuluu toimenpideohjelmiin, joita 
 #~ msgid "Home"
 #~ msgstr "Etusivu"
 
-#~ msgid "Indicator data"
-#~ msgstr "Mittarin data"
-
 #~ msgid "Observations"
 #~ msgstr "Havainnot"
 
@@ -4914,9 +4935,6 @@ msgstr "Ei oikeuksia poistaa käyttäjä joka kuuluu toimenpideohjelmiin, joita 
 
 #~ msgid "By last updated"
 #~ msgstr "Viimeisimmän päivityskerran mukaan"
-
-#~ msgid "No filtering"
-#~ msgstr "Ei suodatusta"
 
 #~ msgid "In the last 7 days"
 #~ msgstr "Edellisen 7 päivän aikana"
