--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-30 10:29+0300\n"
+"POT-Creation-Date: 2024-06-04 15:43+0300\n"
 "PO-Revision-Date: 2024-05-28 07:20+0000\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: Portuguese (Brazil) <https://weblate.kausal.tech/projects/watch/django/pt_BR/>\n"
@@ -827,21 +827,6 @@ msgstr "outros indicadores"
 #, fuzzy
 msgid "contact persons"
 msgstr "pessoas de contato"
-
-#: actions/models/action.py
-#, fuzzy
-msgid "Internal"
-msgstr "Interno"
-
-#: actions/models/action.py aplans/utils.py
-#, fuzzy
-msgid "Public"
-msgstr "Público"
-
-#: actions/models/action.py
-#, fuzzy
-msgid "visibility"
-msgstr "visibilidade"
 
 #: actions/models/action.py actions/models/plan.py content/models.py
 #: feedback/models.py indicators/models.py notifications/models.py
@@ -1709,6 +1694,16 @@ msgstr "Subcategorias"
 
 #: actions/models/features.py
 #, fuzzy
+msgid "No ordering"
+msgstr "ordem"
+
+#: actions/models/features.py
+#, fuzzy
+msgid "Order by name"
+msgstr "nome detalhado"
+
+#: actions/models/features.py
+#, fuzzy
 msgid "Do not show contact persons publicly"
 msgstr "Não mostre publicamente as pessoas de contato"
 
@@ -1873,6 +1868,16 @@ msgstr "Ativar a comparação de indicadores"
 #, fuzzy
 msgid "Set to enable comparing indicators between organizations"
 msgstr "Definido para permitir a comparação de indicadores entre organizações"
+
+#: actions/models/features.py
+#, fuzzy
+msgid "Indicator order"
+msgstr "Indicador"
+
+#: actions/models/features.py
+#, fuzzy
+msgid "Choose how to order indicators in the action pages"
+msgstr "pessoas de contato do indicador"
 
 #: actions/models/features.py
 #, fuzzy
@@ -2878,6 +2883,21 @@ msgstr "Ano (2020)"
 #, fuzzy
 msgid "order"
 msgstr "ordem"
+
+#: aplans/utils.py
+#, fuzzy
+msgid "Internal"
+msgstr "Interno"
+
+#: aplans/utils.py
+#, fuzzy
+msgid "Public"
+msgstr "Público"
+
+#: aplans/utils.py
+#, fuzzy
+msgid "visibility"
+msgstr "visibilidade"
 
 #: aplans/utils.py
 #, fuzzy
@@ -4232,8 +4252,7 @@ msgid "Recipients"
 msgstr "Beneficiários"
 
 #: notifications/wagtail_admin.py
-#, python-format
-msgid "The email message will be sent on the specified day at %(time)s."
+msgid "The email message will be sent on the specified day at"
 msgstr ""
 
 #: notifications/wagtail_admin.py
