--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-04 18:25+0200\n"
+"POT-Creation-Date: 2024-07-22 19:46+0200\n"
 "PO-Revision-Date: 2024-07-04 18:20+0000\n"
 "Last-Translator: Weblate Admin <noreply@mj.kausal.tech>\n"
-"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>"
-"\n"
+"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1474,9 +1473,7 @@ msgstr "Profilbilder für Ansprechpersonen anzeigen"
 
 #: actions/models/features.py
 msgid "Should profile pictures be shown for contact persons in the public UI?"
-msgstr ""
-"Sollen Profilbilder für Ansprechpersonen in der öffentlichen "
-"Benutzeroberfläche angezeigt werden?"
+msgstr "Sollen Profilbilder für Ansprechpersonen in der öffentlichen Benutzeroberfläche angezeigt werden?"
 
 #: actions/models/features.py
 msgid "Show organization ancestors in contact details of contact persons"
@@ -1861,6 +1858,10 @@ msgid "deployment environment"
 msgstr "Bereitstellungsumgebung"
 
 #: actions/models/plan.py
+msgid "Domain names that will we used to redirect to the main hostname. Multiple domains are separated by commas."
+msgstr ""
+
+#: actions/models/plan.py
 msgid "Immediate override of publishing status"
 msgstr "Sofortiges Überschreiben des Veröffentlichungsstatus"
 
@@ -2189,6 +2190,16 @@ msgstr "%(field)s ist kein gültiges Feld im Modell '%(model)s'"
 msgid "Field '%(field)s' in model '%(model)s' of plan '%(plan)s'"
 msgstr "Feld '%(field)s' im Modell '%(model)s' des Plans '%(plan)s'"
 
+#: admin_site/signals.py
+#, python-brace-format
+msgid "You are now viewing the site as {hijacked}"
+msgstr ""
+
+#: admin_site/signals.py
+#, python-brace-format
+msgid "You have stopped viewing the site as {hijacked} and have returned to your original account."
+msgstr ""
+
 #: admin_site/templates/admin_site/own_indicators_panel.html
 msgid "Indicators assigned to me"
 msgstr "Mir zugewiesene Indikatoren"
@@ -2213,6 +2224,10 @@ msgstr "Daten bearbeiten"
 #, python-format
 msgid "%(time_period)s ago"
 msgstr "vor %(time_period)s"
+
+#: admin_site/templates/admin_site/release_impersonation.html
+msgid "Back to own user"
+msgstr ""
 
 #: admin_site/templates/dal_admin_filters/autocomplete-filter.html
 #, python-format
@@ -2243,6 +2258,21 @@ msgstr "Nicht öffentliches Feld"
 msgid "Your account settings have been changed successfully!"
 msgstr "Ihre Kontoeinstellungen wurden erfolgreich geändert!"
 
+#: admin_site/viewsets.py admin_site/wagtail.py
+#, python-format
+msgid "Error deleting items. Try first deleting any %(name)s that are in use."
+msgstr "Fehler beim Löschen von Elementen. Versuchen Sie zuerst, alle verwendeten %(name)s zu löschen."
+
+#: admin_site/viewsets.py admin_site/wagtail.py
+#, python-format
+msgid "In use: \"%(instance)s\"."
+msgstr "In Verwendung: \"%(instance)s\"."
+
+#: admin_site/viewsets.py admin_site/wagtail.py
+#, python-format
+msgid "%s could not be created due to errors."
+msgstr "%s konnte wegen Fehlern nicht erstellt werden."
+
 #: admin_site/wagtail.py
 msgid "View live"
 msgstr "Live ansehen"
@@ -2251,21 +2281,6 @@ msgstr "Live ansehen"
 #, python-format
 msgid "View %s live"
 msgstr "%s live ansehen"
-
-#: admin_site/wagtail.py
-#, python-format
-msgid "Error deleting items. Try first deleting any %(name)s that are in use."
-msgstr "Fehler beim Löschen von Elementen. Versuchen Sie zuerst, alle verwendeten %(name)s zu löschen."
-
-#: admin_site/wagtail.py
-#, python-format
-msgid "In use: \"%(instance)s\"."
-msgstr "In Verwendung: \"%(instance)s\"."
-
-#: admin_site/wagtail.py
-#, python-format
-msgid "%s could not be created due to errors."
-msgstr "%s konnte wegen Fehlern nicht erstellt werden."
 
 #: admin_site/wagtail.py
 #, python-brace-format
@@ -2520,9 +2535,7 @@ msgstr "Datensätze"
 
 #: budget/models.py
 msgid "Date of this data point in context of the dataset's time resolution"
-msgstr ""
-"Datum dieses Datenpunkts im Zusammenhang mit der zeitlichen Auflösung des "
-"Datensatzes"
+msgstr "Datum dieses Datenpunkts im Zusammenhang mit der zeitlichen Auflösung des Datensatzes"
 
 #: budget/models.py indicators/models.py
 msgid "value"
@@ -3587,8 +3600,7 @@ msgstr "Benachrichtigungen konnten aufgrund von Fehlern nicht geändert werden."
 
 #: notifications/wagtail_admin.py
 msgid "Notifications could not be set up due to errors."
-msgstr ""
-"Benachrichtigungen konnten aufgrund von Fehlern nicht eingerichtet werden."
+msgstr "Benachrichtigungen konnten aufgrund von Fehlern nicht eingerichtet werden."
 
 #: notifications/wagtail_admin.py
 msgid "Cannot schedule a notification for the past"
@@ -3714,6 +3726,12 @@ msgstr "Metadaten-Admin"
 #: orgs/models.py
 msgid "metadata admins"
 msgstr "Metadaten-Admins"
+
+#: orgs/views.py
+#, fuzzy
+#| msgid "This will mark the following actions as complete:"
+msgid "This will delete the following objects:"
+msgstr "Dadurch werden die folgenden Maßnahmen als abgeschlossen markiert:"
 
 #: orgs/views.py
 msgid "Add organization to active plan"
@@ -4312,6 +4330,14 @@ msgstr "Ja, löschen"
 msgid "No, don't delete"
 msgstr "Nein, nicht löschen"
 
+#: people/templates/people/view_as_user.html templates/aplans/confirmation.html
+msgid "Yes"
+msgstr "Ja"
+
+#: people/templates/people/view_as_user.html templates/aplans/confirmation.html
+msgid "No"
+msgstr "Nein"
+
 #: people/views.py people/wagtail_admin.py
 msgid "Reset password"
 msgstr "Passwort zurücksetzen"
@@ -4340,6 +4366,24 @@ msgstr "Wenn die E-Mail nicht ankommt, können Sie der Person den folgenden Link
 #, python-format
 msgid "Please take great care that nobody except %(person)s gets access to the link. For additional security, the link will expire in %(days_until_expiration)s days."
 msgstr "Bitte achten Sie darauf, dass niemand außer %(person)s Zugriff auf den Link erhält. Zur zusätzlichen Sicherheit wird der Link in %(days_until_expiration)s Tagen ablaufen."
+
+#: people/views.py people/wagtail_admin.py
+#, fuzzy
+#| msgid "View %s live"
+msgid "View as user"
+msgstr "%s live ansehen"
+
+#: people/views.py
+#, fuzzy, python-format
+#| msgid "Confirm sending password reset link to %(person)s"
+msgid "Confirm viewing the site as user %(person)s"
+msgstr "Bestätige Senden des Passwort-Rücksetz-Links an %(person)s"
+
+#: people/views.py
+#, fuzzy, python-format
+#| msgid "Do you really want to send a password reset link to %(person)s?"
+msgid "Do you really want to view the site as %(person)s?"
+msgstr "Möchten Sie wirklich einen Link zum Zurücksetzen des Passworts an %(person)s senden?"
 
 #: people/wagtail_admin.py
 msgid "Is contact person"
@@ -4393,6 +4437,10 @@ msgstr "Deaktivieren"
 #: people/wagtail_admin.py
 msgid "Create a password reset link"
 msgstr "Einen Link zum Zurücksetzen des Passworts erstellen"
+
+#: people/wagtail_admin.py
+msgid "View site as it looks for this user"
+msgstr ""
 
 #: people/wagtail_admin.py
 msgid "Are you sure you want to deactivate this person?"
@@ -4643,14 +4691,6 @@ msgstr "Markieren dieses Berichts als abgeschlossen rückgängig machen"
 #: reports/wagtail_admin.py
 msgid "Report types"
 msgstr "Berichtstypen"
-
-#: templates/aplans/confirmation.html
-msgid "Yes"
-msgstr "Ja"
-
-#: templates/aplans/confirmation.html
-msgid "No"
-msgstr "Nein"
 
 #: templates/modeladmin/create.html templates/modeladmin/edit.html
 msgid "This page has unsaved changes."
